[gd_scene load_steps=6 format=2]

[ext_resource path="res://bird.png" type="Texture" id=1]
[ext_resource path="res://Bird.gd" type="Script" id=2]
[ext_resource path="res://ScareZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Poof.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[node name="Bird" type="KinematicBody2D" groups=["Birds"]]
position = Vector2( -11, 0 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, 11 )
shape = SubResource( 1 )

[node name="ScareZone" parent="." instance=ExtResource( 3 )]
position = Vector2( 9, 11 )

[node name="EatTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Poof" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 9, 11 )

[node name="PoofTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="EatTimer" to="." method="_on_EatTimer_timeout"]
[connection signal="timeout" from="PoofTimer" to="." method="_on_PoofTimer_timeout"]
